# be-tandau

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci-cd-action.yaml
migrations/: env.py
migrations/versions/: 293b76aa8456_created_chat_tables.py  3295c827f34b_created_tables.py  4c4cf4abb744_created_user_favorites_table.py  728f7c5d7122_chagned_type_of_tables.py  7c1be650029a_chat_messages_changed.py  7c2f50860f79_timestamp_now_changed.py  9198ad1f908d_init_tables.py  b2007b9adfe2_add_ru_kk_fields_for_multilingual_.py  b368454cae46_univer_fields_changed.py  d9ebff632446_created_chat_tables.py  eb30dbd063d5_rename_university_columns_to__en.py  ef8472a57d43_alter_fields_in_tables.py
src/: __init__.py  main.py
src/controllers/: auth.py  chat.py  speciality.py  subject.py  subject_combination.py  subject_combination_specialties.py  university.py  university_specialties.py  user.py
src/core/: config.py  constants.py  databases.py  exeptions.py  middlewares.py  redis.py  store.py
src/di/: app_provider.py  controllers.py  databases.py  repositories.py  services.py
src/models/: __init__.py  chat.py  chat_messages.py  favorites.py  profile.py  speciality.py  subject.py  subject_combination.py  subject_combination_specialties.py  university.py  university_specialties.py  user.py
src/repositories/: chat.py  profile.py  speciality.py  subject.py  subject_combination.py  subject_combination_specialties.py  university.py  university_specialties.py  user.py
src/routers/: __init__.py  auth.py  chat.py  image.py  speciality.py  subject.py  subject_combination.py  subject_combination_specialties.py  university.py  university_specialties.py  user.py
src/schemas/: auth.py  chat.py  image.py  specialty.py  subject.py  subject_combination.py  university.py  user.py
src/services/: email_service.py  openai_cli.py  redis_service.py  security.py  upload_image.py
