[project]
name = "be-tandau-diploma"
version = "0.1.0"
description = ""
authors = [
    {name = "dimash",email = "arystambekdimash005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "dishka (>=1.4.2,<2.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "openai (>=1.73.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
